# rstformat

./: .bumpversion.cfg  .gitignore  AGENTS.md  CHANGES.rst  DESIGN.md  README.md  SECURITY.md  pyproject.toml
rstformat/: __init__.py  __main__.py  cli.py  config.py  formatter.py
tests/: test_formatter.py
