[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rstformat"
version = "0.2.0"
description = "A formatter for reStructuredText files with plugin support for embedded code blocks"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LeXtudio Inc.", email = "support@lextudio.com"}
]
keywords = [
    "reStructuredText",
    "rst",
    "formatter",
    "linter",
    "code-style",
    "docutils",
    "sphinx"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "tomli>=1.2; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]
editorconfig = [
    "editorconfig>=0.12.4",
]
lint = [
    "docutils>=0.21",
    "rstcheck>=6.2.0",
]

[project.scripts]
rstformat = "rstformat.cli:entry_point"

[project.urls]
Homepage = "https://github.com/lextudio/rstformat"
Repository = "https://github.com/lextudio/rstformat"
Documentation = "https://github.com/lextudio/rstformat/blob/master/DESIGN.md"
Changelog = "https://github.com/lextudio/rstformat/blob/master/CHANGES.rst"
Issues = "https://github.com/lextudio/rstformat/issues"

[tool.hatch.build.targets.wheel]
packages = ["rstformat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
